Fixed sidebar background color when collapsing/expanding.

--- a/src/app/components/Admin/Sidebar/_style.scss
+++ b/src/app/components/Admin/Sidebar/_style.scss
@@ -1,7 +1,5 @@
 .blueprint {
     .section-sidebar {
-        background-color: lighten($color-sidebar-bg, 5%);
-
         .sidebar-placeholder {
             display: none;
 
